--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,7 +47,6 @@ android {
         abortOnError false
     }
 
-
     //打包选项
     packagingOptions {
         //去除的文件
@@ -59,9 +58,15 @@ android {
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
     implementation 'com.android.support:appcompat-v7:27.1.0'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
     implementation 'androidx.core:core-ktx:0.2'
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation project(':commonui')
+    implementation 'com.android.support:recyclerview-v7:27.1.0'
+    implementation project(':commonlib')
 }
