--- a/commonlib/build.gradle
+++ b/commonlib/build.gradle
@@ -1,5 +1,6 @@
 apply plugin: 'com.android.library'
-
+apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-kapt'
 android {
     compileSdkVersion rootProject.ext.commonlib.compileSdkVersion
 
@@ -21,5 +22,14 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'com.android.support:appcompat-v7:'+rootProject.ext.commonlib.appcompatv7Version
+    implementation 'com.android.support:appcompat-v7:' + rootProject.ext.commonlib.appcompatv7Version
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation 'com.github.bumptech.glide:glide:' + rootProject.ext.commonlib.glideVersion
+    implementation 'com.github.bumptech.glide:okhttp3-integration:'+rootProject.ext.commonlib.glideOkhttpVersion
+    kapt 'com.github.bumptech.glide:compiler:' + rootProject.ext.commonlib.glideVersion
+    implementation 'jp.wasabeef:glide-transformations:'+ rootProject.ext.commonlib.glideTransformationsVersion
+}
+repositories {
+    mavenCentral()
+    google()
 }
