--- a/config.gradle
+++ b/config.gradle
@@ -16,7 +16,10 @@ ext {
             targetSdkVersion  : 27,
             versionCode       : 1,
             versionName       : "1.0",
-            appcompatv7Version: '27.1.0'
+            appcompatv7Version: '27.1.0',
+            glideVersion      : '4.6.1',
+            glideOkhttpVersion: '4.3.1',
+            glideTransformationsVersion: '3.2.0'
     ]
 
     commonui = [
